Fixed the shifted sheeps.

--- a/assets/css/_sass/_home.scss
+++ b/assets/css/_sass/_home.scss
@@ -37,7 +37,7 @@
    background: rgb(0, 0, 0); /* fallback color */
    background: rgba(0, 0, 0, 0.7);
    padding: 10px;
-   margin-top: 160px;
+   margin-top: 90px;
 }
 
 .featured-posts h3 span {
